[tool.poetry]
name = "repl_nix_small-seo-tools"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2.2.1"
whois = "^0.9.18"
colorama = "^0.4.6"
modules = "^1.0.0"
psutil = "^5.9.4"
bs4 = "^0.0.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
